--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "@types/aos": "^3.0.7",
     "aos": "^2.3.4",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-icons": "^4.12.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
